Inject processor intro