@@ -28,6 +28,7 @@ import javax.lang.model.element.ElementKind;
 import javax.lang.model.element.TypeElement;
 import javax.lang.model.util.Elements;
 
+import io.helidon.common.processor.ProcessingContext;
 import io.helidon.common.processor.TypeInfoFactory;
 import io.helidon.common.types.TypeInfo;
 import io.helidon.common.types.TypeName;
@@ -40,10 +41,10 @@ abstract class TypeHandlerBase {
     static final String UNCONFIGURED_OPTION = "io.helidon.config.metadata.ConfiguredOption.UNCONFIGURED";
     private static final Pattern JAVADOC_CODE = Pattern.compile("\\{@code (.*?)}");
     private static final Pattern JAVADOC_LINK = Pattern.compile("\\{@link (.*?)}");
-    private final ProcessingEnvironment aptEnv;
+    private final ProcessingContext ctx;
 
-    TypeHandlerBase(ProcessingEnvironment aptEnv) {
-        this.aptEnv = aptEnv;
+    TypeHandlerBase(ProcessingContext ctx) {
+        this.ctx = ctx;
     }
 
     static Predicate<TypedElementInfo> isMine(TypeName type) {
@@ -57,7 +58,7 @@ abstract class TypeHandlerBase {
         if (arguments.size() != 1) {
             return false;
         }
-        TypeName argumentType = arguments.get(0).typeName();
+        TypeName argumentType = arguments.getFirst().typeName();
         return CONFIG.equals(argumentType) || COMMON_CONFIG.equals(argumentType);
     }
 
@@ -142,19 +143,19 @@ abstract class TypeHandlerBase {
     }
 
     Optional<TypeInfo> typeInfo(TypeName typeName, Predicate<TypedElementInfo> predicate) {
-        return TypeInfoFactory.create(aptEnv, typeName);
+        return TypeInfoFactory.create(ctx, typeName);
     }
 
     ProcessingEnvironment aptEnv() {
-        return aptEnv;
+        return ctx.aptEnv();
     }
 
     Messager aptMessager() {
-        return aptEnv.getMessager();
+        return ctx.aptEnv().getMessager();
     }
 
     Elements aptElements() {
-        return aptEnv.getElementUtils();
+        return ctx.aptEnv().getElementUtils();
     }
 
     List<TypeName> params(TypedElementInfo info) {
